--- a/ProgettoTeorem_v2.tex
+++ b/ProgettoTeorem_v2.tex
@@ -66,6 +66,10 @@ teorema
 corollary
 \end{corollario}%
 
+\begin{proposizione}%
+proposition
+\end{proposizione}%
+
 \begin{Lemma}[Distribution of inner products]\label{thm:stokesTheoremGeometricAlgebraII:1420}
 Given two blades $A_s, B_r$ with grades subject to $0 < r < s$, and a vector $b$, the inner product distributes according to
 \begin{equation}
