--- a/TheoremTemplateToninus.tex
+++ b/TheoremTemplateToninus.tex
@@ -39,6 +39,7 @@
 	\newmdtheoremenv[style=theoremstyle]{lemma}{Lemma}[section]
 	\newmdtheoremenv[style=theoremstyle]{teorema}{Theorem}[section]
 	\newmdtheoremenv[style=theoremstyle]{corollario}{Corollary}[section]
+	\newmdtheoremenv[style=theoremstyle]{proposizione}{Proposition}[section]
 
 
 %   Fancy Version
@@ -71,7 +72,7 @@
 %Ipotesi con barra a sinistra
 
 	\usetikzlibrary{calc}
-	\usepackage{fourier-orns}
+%	\usepackage{fourier-orns}
 	\tikzset{
   		box/.style={
       		rectangle,
