--- a/TheoremTemplateToninus.tex
+++ b/TheoremTemplateToninus.tex
@@ -38,8 +38,8 @@
 
 	\newmdtheoremenv[style=theoremstyle]{lemma}{Lemma}[section]
 	\newmdtheoremenv[style=theoremstyle]{teorema}{Theorem}[section]
-	\newmdtheoremenv[style=theoremstyle]{corollario}{Corollary}[section]
-	\newmdtheoremenv[style=theoremstyle]{proposizione}{Proposition}[section]
+	\newmdtheoremenv[style=theoremstyle]{corollary}{Corollary}[section]
+	\newmdtheoremenv[style=theoremstyle]{proposition}{Proposition}[section]
 
 
 %   Fancy Version
