--- a/ProgettoTeorem_v2.tex
+++ b/ProgettoTeorem_v2.tex
@@ -62,13 +62,13 @@ Text Text Text Text Text Text $\sqrt{r}$ Text Text Text Text Text
 teorema
 \end{teorema}%
 
-\begin{corollario}%
+\begin{corollary}%
 corollary
-\end{corollario}%
+\end{corollary}%
 
-\begin{proposizione}%
+\begin{proposition}%
 proposition
-\end{proposizione}%
+\end{proposition}%
 
 \begin{Lemma}[Distribution of inner products]\label{thm:stokesTheoremGeometricAlgebraII:1420}
 Given two blades $A_s, B_r$ with grades subject to $0 < r < s$, and a vector $b$, the inner product distributes according to
