proposition don't work properly

--- a/ProgettoTeorem_v2.tex
+++ b/ProgettoTeorem_v2.tex
@@ -96,6 +96,20 @@ Given two blades $A_s, B_r$ with grades subject to $0 < r < s$, and a vector $b$
 ciao
 \end{proof}
 
+QUI FUNZIONA MALE!
+\begin{proposition}[Fiber Bundle as a Categoty.]
+	\begin{hypothesis}
+			\begin{itemize}
+				\item $\mathfrak{C} = $ set of all possible fiber bundle.
+				\item $hom(\mathfrak{C}) = $ set of all bundle morphism.
+			\end{itemize}
+	\end{hypothesis}
+	\begin{thesis}
+				The couple ( C, hom(C)) form a concrete category.
+	\end{thesis}
+\end{proposition}
+
+
 \begin{definition}[Bu]
 bbbb bbbbbb bbbbb bbbbb bbbbbbbbb bbbbb bbbb bbbbb bbbbbbbb bbbbbb bbbbbbbbbb bbbb bbbbb bbbbbb 
 bbbbbbbb
