Modifiche di natale
Change Theorem name from "teorema" to "theorem".

--- a/TheoremTemplateToninus.tex
+++ b/TheoremTemplateToninus.tex
@@ -37,7 +37,7 @@
 }
 
 	\newmdtheoremenv[style=theoremstyle]{lemma}{Lemma}[section]
-	\newmdtheoremenv[style=theoremstyle]{teorema}{Theorem}[section]
+	\newmdtheoremenv[style=theoremstyle]{theorem}{Theorem}[section]
 	\newmdtheoremenv[style=theoremstyle]{corollary}{Corollary}[section]
 	\newmdtheoremenv[style=theoremstyle]{proposition}{Proposition}[section]
 
@@ -228,12 +228,12 @@
 	linecolor=magenta,
 	middlelinewidth=1pt,
 	frametitlerule=true,
-	frametitle={Observation},	
+%	frametitle={Observation},	
 	skipabove=3pt,
 }
 
-\newmdenv[style=observationstyle]{observation}
-
+%\newmdenv[style=observationstyle]{observation}
+\mdtheorem[ style = observationstyle ]{observation}{Observation}
 
 
 
