--- a/ProgettoTeorem_v2.tex
+++ b/ProgettoTeorem_v2.tex
@@ -58,9 +58,9 @@ Text Text Text Text Text Text $\sqrt{r}$ Text Text Text Text Text
 
 \end{lemma}%
 
-\begin{teorema}%
+\begin{theorem}%
 teorema
-\end{teorema}%
+\end{theorem}%
 
 \begin{corollary}%
 corollary
@@ -139,7 +139,42 @@ Text
 \end{remark}
 
 
+\section{List of all the sentences}
 
+\subsection{Sentence Matematica}
+
+\begin{itemize}
+ \item Preambolo
+ \item Definizione
+ \item Osservazione
+ \item Lemma
+ \item Teorema
+ \item Proposizione
+ \item Corollario
+ \item Fissare la notazione:
+ 	\\ Quando si da un nome particolare ad una piccola sottodefinizione oppure quando si attribuisce un simbolo a qualcosa
+ \item Esempio 	
+ \end{itemize}
+
+\subsection{Sentence Fisica}
+\begin{itemize}
+ \item assioma di matematizzazione 
+ 	\\(e.g. spazio-tempo = varietà 4D)
+ \item assioma come concetto primitivo 
+ 	\\(e.g. lo spazio fisico ha 3 dimensioni)
+ \item assioma di reinterpretazione 
+ 	\\(e.g. non mi viene in mente ora... è qualcosa che dopo tanti calcoli tiro fuori e gli appioppo una qualche interpretazione fisica)
+ \item giustificazione assioma 
+ 	\\L'assioma è qualcosa che non si può dimostrare ma tendenzialmente si può dare un argomento che cerca di giustificare il fatto che viene usato.. eg. l'omogeneità nello spazio-tempo presa per vera nei modelli FRW.
+ \item Conferma sperimentale
+ 	\\ si mette qua dentro la reference a qualche espiremento che avvalora gli assiomi o altro
+ \item Informazioni sul contesto.
+ 	\\ esempio, studio proteine, in questo contesto gli ordini di grandezza sono ...
+ \item Postulato
+ 	\\Ci sono differenze tra postulato e assioma... assioma= verità autoevidente, postulato= affermazione assunta vera
+
+
+\end{itemize}
 
 
 \end{document}
