--- a/ProgettoTeorem_plain.tex
+++ b/ProgettoTeorem_plain.tex
@@ -8,30 +8,6 @@
 \input{TheoremTemplateToninus_plain.tex}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 \begin{document}
 
 
@@ -61,7 +37,11 @@ proposition
 \begin{proof}
 ciao
 \end{proof}
-
+\proof
+CiaoCiao
+Ciao
+\lipsum[3]
+\endproof
 
 
 
@@ -74,7 +54,7 @@ bbbbbbbb
 \section{WiP}
 
 \begin{notationfix}
-Text'
+Text
 \end{notationfix}
 
 \begin{TAM}
@@ -131,5 +111,8 @@ Text
 
 \end{itemize}
 
+\begin{Warning}
+	Text
+\end{Warning}
 
 \end{document}
