--- a/TheoremTemplateToninus_plain.tex
+++ b/TheoremTemplateToninus_plain.tex
@@ -31,14 +31,17 @@
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}[chapter]
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %NOTAZIONE   (WIP) (troppo non standard, nel plain deve diventare definizione base o testo semplice)
 %\newtheorem{notationfix}{Definition}[chapter]
 \newenvironment{notationfix}[1]
     {
 		\begin{definition}
+		
     }
     { 
+    
 		\end{definition}
 	}
 
@@ -56,8 +59,10 @@
 \newenvironment{TAM}[1]
     {
 		\begin{remark}
+		
     }
     { 
+    
 		\end{remark}
 	}
 
@@ -92,30 +97,7 @@
 	}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %con opzione per il tratteggio
@@ -130,45 +112,86 @@
 
  	\usepackage{amssymb} 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Ipotesi con barra a sinistra
+
+	\usetikzlibrary{calc}
+%	\usepackage{fourier-orns}
+	\tikzset{
+  		box/.style={
+      		rectangle,
+      		draw=red,
+      		fill=white,
+      		scale=1,
+      		overlay
+    }		}
+
+	\mdfdefinestyle{hypothesis}{%
+ 		hidealllines=true,leftline=true,
+ 		skipabove=12,skipbelow=12pt,
+ 		innertopmargin=0.4em,%
+ 		innerbottommargin=0.4em,%
+ 		innerrightmargin=0.7em,%
+ 		rightmargin=0.7em,%
+ 		innerleftmargin=1.7em,%
+ 		leftmargin=0.7em,%
+ 		middlelinewidth=.2em,%
+ 		linecolor=blue,%
+ 		firstextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+(0,\y1)$) 
+                           node[box] {\textcolor{blue}{Hp:}};},%
+ 		secondextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+(0,\y1)$) 
+                           node[box] {\textcolor{blue}{Hp:}};},%
+ 		middleextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+(0,\y1)$) 
+                           node[box] {\textcolor{blue}{Hp:}};},%
+ 		singleextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+(0,\y1)$) 
+                           node[box] {\textcolor{blue}{Hp:}};},%
+	}
+
+\newmdenv[style=hypothesis]{hypothesis}
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Tesi con barra a sinistra
+
+	\mdfdefinestyle{thesis}{%
+ 		hidealllines=true,leftline=true,
+ 		skipabove=12,skipbelow=12pt,
+ 		innertopmargin=0.4em,%
+ 		innerbottommargin=0.4em,%
+ 		innerrightmargin=0.7em,%
+ 		rightmargin=0.7em,%
+ 		innerleftmargin=1.7em,%
+ 		leftmargin=0.7em,%
+ 		middlelinewidth=.2em,%
+ 		linecolor=blue,%
+ 		firstextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+(0,\y1)$) 
+                           node[box] {\textcolor{blue}{Th:}};},%
+ 		secondextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+(0,\y1)$) 
+                           node[box] {\textcolor{blue}{Th:}};},%
+ 		middleextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+(0,\y1)$) 
+                           node[box] {\textcolor{blue}{Th:}};},%
+ 		singleextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+(0,\y1)$) 
+                           node[box] {\textcolor{blue}{Th:}};},%
+	}
+
+\newmdenv[style=thesis]{thesis}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Danger box (WIP).
 % It encapsulates a piece of text that needs revision
 % http://tex.stackexchange.com/questions/52023/mdframed-put-something-on-the-start-of-one-vertical-left-rule
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newenvironment{Warning}[1]
+    {
+		\begin{description}
+			\item[!danger!]
+    }
+    { 
+			\item[!danger!]
+		\end{description}    
+	}
 
-
-
-\definecolor{warningColor}{named}{red}
-\tikzset{
-  warningsymbol/.style={
-      rectangle,
-      draw=warningColor,
-      fill=white,
-      scale=1,
-      overlay}
-}
-
-\mdfdefinestyle{warning}{%
- hidealllines=true,leftline=true,
- skipabove=12,skipbelow=12pt,
- innertopmargin=0.4em,%
- innerbottommargin=0.4em,%
- innerrightmargin=0.7em,%
- rightmargin=0.7em,%
- innerleftmargin=1.7em,%
- leftmargin=0.7em,%
- middlelinewidth=.2em,%
- linecolor=warningColor,%
- fontcolor=warningColor,%
- firstextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+0.5*(0,\y1)$) 
-                           node[warningsymbol] {\danger};},%
- secondextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+0.5*(0,\y1)$) 
-                           node[warningsymbol] {\danger};},%
- middleextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+0.5*(0,\y1)$) 
-                           node[warningsymbol] {\danger};},%
- singleextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+0.5*(0,\y1)$) 
-                           node[warningsymbol] {\danger};},%
-}
-
-\newmdenv[style=warning]{Warning}
