--- a/Test/Plain_Test.tex
+++ b/Test/Plain_Test.tex
@@ -1,33 +1,10 @@
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,12pt]{report} 
 
 %Dummy text
 \usepackage{lipsum}
 
-
-
-\input{TheoremTemplateToninus.tex}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+%\input{TheoremTemplateToninus_plain.tex}
+\usepackage[fancy]{../ToninusTheorem}
 
 
 
@@ -42,19 +19,7 @@
 	Enunciato...
 Text Text Text Text Text Text $\sqrt{r}$ Text Text Text Text Text
 
-	\begin{hypothesis}
-		f tale che
-			\begin{enumerate}
-				\item 
-			\end{enumerate}
-	\end{hypothesis}
-	
-	\begin{thesis}
-		bubusettete
-			\begin{enumerate}
-				\item f bulla
-			\end{enumerate}
-	\end{thesis}
+
 
 \end{lemma}%
 
@@ -70,44 +35,15 @@ corollary
 proposition
 \end{proposition}%
 
-\begin{Lemma}[Distribution of inner products]\label{thm:stokesTheoremGeometricAlgebraII:1420}
-Given two blades $A_s, B_r$ with grades subject to $0 < r < s$, and a vector $b$, the inner product distributes according to
-\begin{equation}
-    A_s \cdot \left( b \wedge B_r \right) = \left( A_s \cdot b \right) \cdot B_r.
-\end{equation}
-
-	\begin{hypothesis}
-		f tale che
-			\begin{enumerate}
-				\item 
-			\end{enumerate}
-	\end{hypothesis}
-	
-	\begin{thesis}
-		bubusettete
-			\begin{enumerate}
-				\item f bulla
-			\end{enumerate}
-	\end{thesis}
-
-\end{Lemma}
-
 \begin{proof}
 ciao
 \end{proof}
+\proof
+CiaoCiao
+Ciao
+\lipsum[3]
+\endproof
 
-QUI FUNZIONA MALE!
-\begin{proposition}[Fiber Bundle as a Categoty.]
-	\begin{hypothesis}
-			\begin{itemize}
-				\item $\mathfrak{C} = $ set of all possible fiber bundle.
-				\item $hom(\mathfrak{C}) = $ set of all bundle morphism.
-			\end{itemize}
-	\end{hypothesis}
-	\begin{thesis}
-				The couple ( C, hom(C)) form a concrete category.
-	\end{thesis}
-\end{proposition}
 
 
 \begin{definition}[Bu]
@@ -119,7 +55,7 @@ bbbbbbbb
 \section{WiP}
 
 \begin{notationfix}
-Text'
+Text
 \end{notationfix}
 
 \begin{TAM}
@@ -175,6 +111,7 @@ Text
 
 
 \end{itemize}
+
 
 
 \end{document}
