--- a/Old/Sty_Fancy.tex
+++ b/Old/Sty_Fancy.tex
@@ -1,3 +1,4 @@
+
 %primo passo: creare un environment box personalizzato
 %   Preambolo personalizzato 
 %		Inscatolamento di teoremi, dimostrazioni e definizioni con diversi colori
@@ -11,7 +12,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %con opzione per il tratteggio
-	\usepackage[framemethod=TikZ]{mdframed}  
+%	\usepackage[framemethod=TikZ]{mdframed}  
 	\mdfdefinestyle{dotted}{ tikzsetting={ 
 		draw= white, 
 		dash pattern = on 3pt off 3pt 
@@ -20,7 +21,7 @@
 
 
 
- 	\usepackage{amssymb} 
+% 	\usepackage{amssymb} 
    
 
  
@@ -264,42 +265,3 @@
     { 
 		\end{description}    
 	}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Danger box (WIP).
-% It encapsulates a piece of text that needs revision
-% http://tex.stackexchange.com/questions/52023/mdframed-put-something-on-the-start-of-one-vertical-left-rule
-
-\definecolor{warningColor}{named}{red}
-\tikzset{
-  warningsymbol/.style={
-      rectangle,
-      draw=warningColor,
-      fill=white,
-      scale=1,
-      overlay}
-}
-
-\mdfdefinestyle{warning}{%
- hidealllines=true,leftline=true,
- skipabove=12,skipbelow=12pt,
- innertopmargin=0.4em,%
- innerbottommargin=0.4em,%
- innerrightmargin=0.7em,%
- rightmargin=0.7em,%
- innerleftmargin=1.7em,%
- leftmargin=0.7em,%
- middlelinewidth=.2em,%
- linecolor=warningColor,%
- fontcolor=warningColor,%
- firstextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+0.5*(0,\y1)$) 
-                           node[warningsymbol] {\danger};},%
- secondextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+0.5*(0,\y1)$) 
-                           node[warningsymbol] {\danger};},%
- middleextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+0.5*(0,\y1)$) 
-                           node[warningsymbol] {\danger};},%
- singleextra={\path let \p1=(P), \p2=(O) in ($(\x2,0)+0.5*(0,\y1)$) 
-                           node[warningsymbol] {\danger};},%
-}
-
-\newmdenv[style=warning]{Warning}
