--- a/theoremtemplate.sty
+++ b/theoremtemplate.sty
@@ -22,8 +22,7 @@
 
 %%%%--  						  -- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \RequirePackage{amssymb} 
-\RequirePackage[framemethod=TikZ]{mdframed}  
-\RequirePackage[framemethod=TikZ]{mdframed}  
+\RequirePackage[framemethod=TikZ]{mdframed}
 
 	%Dotted Line
 	\mdfdefinestyle{dotted}{ 
@@ -168,7 +167,7 @@
     }%
 
 %-----------------------------------------------
-%DEFINIZIONE
+%DEFINITION
 %-----------------------------------------------
 
 	\mdfdefinestyle{definitionstyle}{
@@ -184,7 +183,7 @@
 	\mdtheorem[ style = definitionstyle ]{definition}{Definition}
 
 %-----------------------------------------------
-%NOTAZIONE   (WIP)
+%NOTATION   (WIP)
 	\mdfdefinestyle{notationstyle}{
 		roundcorner=5pt,
 		linecolor=green,
@@ -197,7 +196,7 @@
 		skipabove=3pt,
 	}
 
-	\newmdenv[style=notationstyle]{notationfix}
+	\newmdenv[style=notationstyle]{notation}
 
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
