Modified Notation fixing

--- a/theoremtemplate.sty
+++ b/theoremtemplate.sty
@@ -190,9 +190,11 @@
 		middlelinewidth=2pt,
 		frametitlerule=true,
 		frametitlerulecolor=green!60,
-		%	frametitlerulewidth =1pt,
+		frametitleaboveskip=2pt,
+		frametitlebelowskip=2pt,
+		%frametitlerulewidth =1pt,
 		%	innertopmargin= \topskip ,
-		frametitle={Notation fixing},
+		frametitle={Notation},
 		skipabove=3pt,
 	}
 
