--- a/theoremtemplate.sty
+++ b/theoremtemplate.sty
@@ -253,7 +253,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Remark (WIP)
 \mdfdefinestyle{remarkstyle}{
-	linecolor=cyan,
+	linecolor=orange,%cyan,
 	middlelinewidth=1pt,
 	frametitlerule=true,
 	frametitle={Remark:},	
